k8s/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: destination-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: destination-service
  template:
    metadata:
      labels:
        app: destination-service
    spec:
      containers:
      - name: destination-service
        image: gcr.io/${PROJECT_NAME}/backend:latest
        ports:
        - containerPort: 8000
