k8s/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: destination-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: destination-frontend
  template:
    metadata:
      labels:
        app: destination-frontend
    spec:
      containers:
      - name: destination-frontend
        image: gcr.io/destination/destination_frontend_app:latest
        ports:
        - containerPort: 3000
