k8s/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: destination-service
spec:
  selector:
    app: destination-service
  ports:
  - name: http
    port: 8080
    targetPort: 8000
  type: LoadBalancer
