k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: destination-frontend
spec:
  selector:
    app: destination-frontend
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: ClusterIP
