k8s/destination-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: destinationsurf-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: destinationsurf-ip
spec:
  rules:
  - host: destinationsurf.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: destination-frontend
            port:
              name: http
