k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: frontend-ip
    kubernetes.io/ingress.class: "gce"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  rules:
  - host: destinationsurf.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: destination-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: destination-frontend
            port:
              number: 80
